# FastApi_intro

./: pyproject.toml
app/: app.py  models.py  schema.py
migrations/: env.py
migrations/versions/: ce4c70dd6df1_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
